[tool.poetry]
name = "guy"
version = "0.3.0"
description = "A simple module for making HTML GUI applications with python3"
authors = ["manatlan <manatlan@gmail.com>"]
readme = 'README.md'
keywords=['gui', 'html', 'javascript', 'electron', "asyncio", "tornado", "websocket"]
homepage = "https://github.com/manatlan/guy"
repository = "https://github.com/manatlan/guy"
documentation = "https://github.com/manatlan/guy"
license="MIT"
classifiers = [
        "Operating System :: OS Independent",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Build Tools",        
]

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.6"
cefpython3 = "^66.0"
vbuild = "0.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
